k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkpulse-api
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: linkpulse-api
  template:
    metadata:
      labels:
        app: linkpulse-api
    spec:
      containers:
        - name: linkpulse-docker
          image: asia-east1-docker.pkg.dev/linkpulse-508704/linkpulse-repo/linkpulse:24ab8d7b7211a29734b49dffbeaf91c0122416b2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
