k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkpulse-api
spec:
  type: LoadBalancer
  selector:
    app: linkpulse-api
  ports:
    - port: 80
      targetPort: 8080
